fix link wrapping

--- a/index.css
+++ b/index.css
@@ -81,6 +81,7 @@ body {
 
 .ref {
     max-width: 800px;
+    word-break: break-all;
     padding: 5px;
 }
 
